Fixed UI.Sortable with MSIE.

--- a/test/ui/sortable.html
+++ b/test/ui/sortable.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
 <head>
   <title>UI.Sortable</title>
@@ -37,7 +37,7 @@ load_addons('../..');
 load_ui('../..');
 </script>
 
-<!--script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script-->
+<script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script>
 <script type="text/javascript">
 new UI.Sortable($('my-list'));
 new UI.Sortable($('my-list-2'));
